ajuste nome arquivo de download

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,6 +21,10 @@
         <input type="radio" name="modeltype" value="clas">
         Classificação
       </label>
+      <label class="radio" disabled>
+        <input type="radio" name="modeltype" value="clas_nlp">
+        Classificação de Mensagens
+      </label>
     </div>
 
     <br>
