--- a/app/templates/complete.html
+++ b/app/templates/complete.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-Voila file uploaded
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content%}
+<div class="col-md-12 intro-info order-md-first order-last">
+  <h2><br><span> Erro durante a execução =( </span></h2>
+</div>
+{% endblock %}
